--- a/DWP-CitasMedicas/appsettings.json
+++ b/DWP-CitasMedicas/appsettings.json
@@ -6,22 +6,18 @@
     }
 
   },
-//----------------------------------------------------------------------------------------------------------------------
+  //----------------------------------------------------------------------------------------------------------------------
   //PARA ENTRAR AL ARCHIVO secrets.json DONDE VIENE EL CORREO Y CONTRASEÑA SIGUE LA RUTA:
   //<Click derecho en el nombre del proyecto -> "Administrar secretos de ususario">
   "CONFIGURACIONES_EMAIL": {
     "HOST": "smtp.gmail.com",
     "PUERTO": 587
   },
-//--------------------------------------------------------------------------------------------------------------------
+  //--------------------------------------------------------------------------------------------------------------------
   "ConnectionStrings": {
-    "connectionDB": "Data Source=ALEXIS;Database=DWP;Trusted_Connection=False;TrustServerCertificate=True;"
+    "connectionDB": "Data Source=ALEXIS;Database=DWP;Trusted_Connection=True;TrustServerCertificate=True;"
   },
- //-------------------------------------------------------------------------------------------------------------------
-  "GoogleKeys": {
-    "CientId": "web-citas-d1bd7"
-    //"ClientSecret": "LLave proporcionada por cloud services"
-  },
+  //-------------------------------------------------------------------------------------------------------------------
 
   "AllowedHosts": "*"
 
